--- a/task-creating-relationships.adoc
+++ b/task-creating-relationships.adoc
@@ -170,7 +170,7 @@ Date Modified:: Choose all files regardless of their last modified date, files m
 
 Date Created:: When an SMB server is the source, this setting enables you to sync files that were created after a specific date, before a specific date, or between a specific time range.
 
-ACL - Access Control List:: Copy ACLs from an SMB server by enabling a setting when you create a relationship or after you create a relationship.
+ACL - Access Control List:: Copy ACLs only, files only, or ACLs and files from an SMB server by enabling a setting when you create a relationship or after you create a relationship.
 
 . On the *Tags/Metadata* page, choose whether to save a key-value pair as a tag on all files transferred to the S3 bucket or to assign a metadata key-value pair on all files.
 +
