--- a/task-installing-gcp.adoc
+++ b/task-installing-gcp.adoc
@@ -151,6 +151,9 @@ When you set up a sync relationship, you can now choose that bucket as the sourc
 
 BlueXP copy and sync creates a data broker in Google Cloud using the following configuration.
 
+Node.js compatibility::
+v20
+
 Machine type::
 n2-standard-4
 
